[feat] 添加多端登录权限区分及校验