@@ -14,3 +14,9 @@
 执行 doc/sql 下的 maintenance.sql 文件，初始租户为测试，账号为 admin， 密码为 123456
 
 doc/layout 为布局，不需要可以自行删除 maintenance-system/src/main/java/com/device/system/column 下的所有代码
+
+> 若报错
+```
+Preview features are not enabled for com/device/system/JDK17Test (class file version 61.65535). Try running with '--enable-preview'
+```
+跳过maven的test即可
